# flutterapp

./: README.md
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/documentation_app/: MainActivity.kt
app/android/app/src/profile/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: .gitignore  editor_page.dart  main.dart  models.dart  providers.dart  repository.dart
app/test/: widget_test.dart
server/: .gitignore  Cargo.toml  schema.json
server/migrations/2020-01-04-235404_create_documents/: down.sql  up.sql
server/src/: graphql.rs  main.rs  schema.rs
server/src/models/: document.rs  mod.rs
