[package]
name = "documentation_app"
version = "0.1.0"
authors = ["Ryan Lee <drdgvhbh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.2" }
serde_json = { version = "1.0.2" }
serde_derive = { version = "1.0.2" }
juniper = { version = "0.14.2", default-features = false }
rocket = "0.4.2"
juniper_rocket = "0.5.2"
quill-delta = { git = "https://github.com/drdgvhbh/quill-delta" }
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
sha2 = "0.8"
hex = "0.4"
chrono = "0.4"

[dev-dependencies.juniper]
version = "0.14.2"
features = ["expose-test-schema", "serde_json"]
